--- a/src/ui-client/public/index.html
+++ b/src/ui-client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Maturity Model Survey</title>
+    <title>Integrated Informatics Maturity Assessment Tool (IIMAT)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
